docs📝: 补充jvm笔记